# RaspberyPi-IMSAI-8080

./: .gitignore  LICENSE  README.md  TODO.md
docs/: bom.md  panel-layout.md  protocol.md
firmware/: CMakeLists.txt  README.md
firmware/src/: config.h  crc8.c  crc8.h  hc165.c  hc165.h  main.c  protocol.c  protocol.h  tlc5947.c  tlc5947.h
hardware/: README.md  bom.csv  design-spec.md  imspi8080.kicad_pcb  imspi8080.net  imspi8080_rev2.kicad_pcb  imspi8080_rev2.kicad_pro  imspi8080_rev3.kicad_pcb  imspi8080_rev3.kicad_pro  imspi8080_skidl.py  place_holes.py  place_leds.py  rev3_build.py  rev3_pads.py  rev3_place2.py  rev3_voids.py
hardware/OLD/: REV2-NOTES.md  imspi8080.kicad_pro  place_holes.py  place_leds.py  place_passives.py  rev2_check.py  rev2_place.py
hardware/OLD/fab/: imspi8080-cpl.csv
hardware/OLD/jlcpcb-rev1/: imspi8080-cpl.csv
hardware/OLD/jlcpcb-rev2/: imspi8080-rev2-bom.csv
hardware/faceplate/: faceplate_3d.scad  faceplate_paint.scad  gen_faceplate_3d.py  gen_front_panel.py  ten-inch-rack-specs.md
hardware/jlcpcb/: README.txt
hardware/jlcpcb-rev2/: imspi8080-rev2-cpl.csv
hardware/jlcpcb-rev3/: README.txt  imspi8080-rev3-bom.csv  imspi8080-rev3-cpl.csv
hardware/jlcpcb-rev3/gerbers/: imspi8080_rev3-B_Cu.gbr  imspi8080_rev3-B_Mask.gbr  imspi8080_rev3-B_Paste.gbr  imspi8080_rev3-B_Silkscreen.gbr  imspi8080_rev3-Edge_Cuts.gbr  imspi8080_rev3-F_Cu.gbr  imspi8080_rev3-F_Mask.gbr  imspi8080_rev3-F_Paste.gbr  (+4 more)
host/: README.md  pyproject.toml
host/examples/: lamp_test.py  panel_demo.py
host/imspi/: __init__.py  crc8.py  panel.py  protocol.py
(+12 files in other folders)
