[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imspi"
version = "0.1.0"
description = "Host driver for the IMSPI 8080 smart front panel"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sean Galloway" }]
dependencies = ["pyserial>=3.5"]

[tool.hatch.build.targets.wheel]
packages = ["imspi"]
